--- a/index.html
+++ b/index.html
@@ -36,6 +36,72 @@
 </head> 
 
 <body> 
+
+     <table class="menulist">
+          <tr>
+               <th class="menu">
+                    <a href="/">
+                         WEB
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/service">
+                         SERVICE
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/privacy">
+                         PRIVACY
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/about">
+                         ABOUT
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/contact">
+                         CONTACT
+                    </a>
+               </th>
+          </tr>
+     </table>
+     <div class="content">
+          <p><img src="/logo.png"></img></p>
+     </div>
+     <table class="menulist">
+          <tr>
+               <th class="menu">
+                    <a href="/">
+                         WEB
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/service">
+                         SERVICE
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/privacy">
+                         PRIVACY
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/about">
+                         ABOUT
+                    </a>
+               </th>
+               <th class="menu">
+                    <a href="/contact">
+                         CONTACT
+                    </a>
+               </th>
+          </tr>
+     </table>
+     <div class="footer">
+          COPYRIGHT © 2022 • <a class="anchor" href="https://sdex.top">SDEX</a> • ALL RIGHTS RESERVED
+     </div>
+
 </body> 
 
 </html> 
