--- a/index.html
+++ b/index.html
@@ -31,17 +31,54 @@
 <meta name="theme-color" content="#ffffff"> 
 
 <style> 
+
+h1               { 
+                   font-family:Averia Serif Libre; 
+                   font-size:50px; 
+                   font-weight:bold; 
+                   color:goldenrod; 
+                   margin-top:0; 
+                   margin-bottom:0; 
+                 } 
+h2               { 
+                   font-size:20px; 
+                   font-weight:bold; 
+                   color:cyan; 
+                   margin-top:0; 
+                   margin-bottom:0; 
+                 } 
+h3               { 
+                   font-size:16px; 
+                   font-weight:bold; 
+                   color:springgreen; 
+                   margin-top:0; 
+                   margin-bottom:0; 
+                 } 
+h4               { 
+                   font-family:Averia Serif Libre; 
+                   font-size:16px; 
+                   font-weight:bold; 
+                   color:white; 
+                   margin-top:8px; 
+                   margin-bottom:8px; 
+                 } 
+
 </style> 
 
 </head> 
 
 <body> 
 
+     <div class="header">
+          <h1>SDEX</h1>
+          <h2>STELLAR DECENTRALIZED EXCHANGE</h2>
+          <h3>A Gateway To Buy And Sell Assets Within Stellar Blockchain</h3>
+     </div>
      <table class="menulist">
           <tr>
                <th class="menu">
                     <a href="/">
-                         WEB
+                         PORTAL
                     </a>
                </th>
                <th class="menu">
@@ -73,7 +110,7 @@
           <tr>
                <th class="menu">
                     <a href="/">
-                         WEB
+                         PORTAL
                     </a>
                </th>
                <th class="menu">
