--- a/index.html
+++ b/index.html
@@ -103,8 +103,14 @@ h4               {
                </th>
           </tr>
      </table>
+     <div class="switcher">
+          Pindah Ke Bahasa Indonesia
+     </div>
      <div class="content">
           <p><img src="/logo.png"></img></p>
+     </div>
+     <div class="switcher">
+          Pindah Ke Bahasa Indonesia
      </div>
      <table class="menulist">
           <tr>
