--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head> 
 
-<link rel="preload" href="/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
-<noscript><link rel="stylesheet" href="/css/styles.css"></noscript> 
+<link rel="preload" href="/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
+<noscript><link rel="stylesheet" href="/css/style.css"></noscript> 
 
 <title>SDEX - Stellar Decentralized Exchange | sdex.top</title> 
 <meta name="description" content="SDEX Stellar Decentralized Exchange"> 
