--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head> 
 
-<link rel="preload" href="/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
-<noscript><link rel="stylesheet" href="/css/main.css"></noscript> 
+<link rel="preload" href="/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> 
+<noscript><link rel="stylesheet" href="/css/style.css"></noscript> 
 
 <title>SDEX - Stellar Decentralized Exchange | sdex.top</title> 
 <meta name="description" content="SDEX Stellar Decentralized Exchange"> 
@@ -104,13 +104,13 @@ h4               {
           </tr>
      </table>
      <div class="switcher">
-          Pindah Ke Bahasa Indonesia
+          PINDAH KE BAHASA INDONESIA
      </div>
      <div class="content">
           <p><img src="/logo.png"></img></p>
      </div>
      <div class="switcher">
-          Pindah Ke Bahasa Indonesia
+          PINDAH KE BAHASA INDONESIA
      </div>
      <table class="menulist">
           <tr>
